syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (Product) {}
  rpc GetProducts (Empty) returns (ProductList) {}
  rpc CreateProduct (CreateProductRequest) returns (Product) {}
}

message Empty {}

message GetProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  int32 quantity = 3;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
}

message ProductList {
  repeated Product products = 1;
} 